# MuSimu

./: CMakeLists.txt  CRTest.cxx  README.md  testJohn.cpp
inc/: ActionRegister.hh  Analysis.hh  Argument.hh  CryDetector.hh  CryGenerator.hh  CryHit.hh  CryPositionSD.hh  EventAction.hh  GdmlConstruction.hh  Generator.hh  MuonRecorder.hh  OpRecorder.hh  PduGenerator.hh  PhysicsList.hh  PmtHit.hh  PmtSD.hh  RNGWrapper.hh  RunAction.hh  StackAction.hh  StepAction.hh  SysConstruction.hh  SysMessenger.hh  TrackingAction.hh  VirtualRecorder.hh  VirtualSD.hh
macJohn/AlCoatingEnd/: John_Module_Groove2Triangle.gdml_entity  MaterialDB.gdml_entity  PropertyDB.gdml_entity  SurfaceDB.gdml_entity  Surface_DefaultProperty.gdml_entity  System_Slab.gdml  Volume_Groove.gdml_entity  test_pdu.mac
macJohn/GrooveCompare/: John_Module_Groove2Triangle.gdml_entity  John_TriangleGroove2.gdml  MaterialDB.gdml_entity
macJohn/Hu-ReflectionInOneEnd/: MaterialDB.gdml_entity  SolidDB.gdml_entity  SurfaceDB.gdml_entity
macJohn/ImagingTest/: ImagingDetectorModule.gdml_entity  ImagingLeadXY.gdml  John_Module_Groove1Triangle.gdml_entity  test_pdu.mac
macJohn/Original/: PropertyDB.gdml_entity
macJohn/PhotonYieldingCompare-GrooveCompare/: John_TriangleGroove2.gdml
macJohn/PhotonYieldingCompare-Hu/: Module_Slab.gdml_entity  Surface_DefaultProperty.gdml_entity  Surface_DefaultSetup.gdml_entity  System_TriangleBar.gdml
macJohn/PoCAVerify-4Cubes/: ImagingLeadXY.gdml  (+8 more)
src/: ActionRegister.cc  Analysis.cc  Argument.cc  CryDetector.cc  CryGenerator.cc  CryHit.cc  CryPositionSD.cc  EventAction.cc  GdmlConstruction.cc  Generator.cc  MuonRecorder.cc  OpRecorder.cc  PduGenerator.cc  PhysicsList.cc  RunAction.cc  StackAction.cc  StepAction.cc  SysConstruction.cc  SysMessenger.cc  TrackingAction.cc  VirtualRecorder.cc  VirtualSD.cc
(+28 files in other folders)
